# portfolio-server-gateway

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
src/: backend.rs  client.rs  etcd_client_helper.rs  generated.rs  logger.rs  main.rs  proto_converter.rs  proto_server.rs
src/backend/: backend_client.rs  zone_clients.rs
src/client/: client_main.rs  proto_handler.rs
src/client/proto_handler/: handle_func.rs  handler.rs
src/client/proto_handler/handle_func/: endgame.rs  endgame_handler.rs  forward_to_lobby.rs  forward_to_session.rs  forward_to_zone.rs  start_game_handler.rs
src/logger/: init_logger.rs
src/network/: proto.rs
src/network/proto/common/: generated.rs  math.u.pb.rs  session.u.pb.rs
src/network/proto/process/db/user/: login.u.pb.rs  logout.u.pb.rs  signup.u.pb.rs
src/network/proto/process/gateway/: packet.u.pb.rs
src/network/proto/process/lobby/: end_game.u.pb.rs  enter.u.pb.rs  exit.u.pb.rs  start_game.u.pb.rs
src/network/proto/process/login/: login.u.pb.rs  logout.u.pb.rs
src/network/proto/process/network/: text.u.pb.rs
src/network/proto/process/world/: player_route.u.pb.rs  route_player_data.u.pb.rs  service.u.pb.rs
src/network/proto/process/zone/: client_data_getter.u.pb.rs  client_initializer.u.pb.rs  enemy.u.pb.rs  sync.u.pb.rs
src/proto_converter/: message_converter.rs
src/proto_server/: zone_sync_service.rs
