[package]
name = "portfolio-server-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"
tonic = "0.14"
prost = "0.14.3"
log = "0.4"
simplelog = "0.12"
protobuf = "4.32.1-release"

[build-dependencies]
tonic-prost-build = "0.14.5"
